# careagent-backend

./: .env.example  .gitignore  ARCHIVED_README.md  README.md  pyproject.toml  render.yaml
.github/workflows/: backend-ci.yml
app/: __init__.py  main.py
app/agent/: __init__.py  runtime.py
app/api/: routes.py
app/core/: __init__.py  audit.py  config.py  errors.py  firebase.py  request_context.py  security.py
app/domain/: __init__.py  risk.py  (+2 more)
docs/: agent-runtime-configuration.md  audit-events.md  authorization-matrix.md  channels-escalation-implementation.md  queue-event-design.md  remaining-backend-work-report.md  risk-engine-implementation.md  supabase-deployment.md  supabase-google-auth.md
migrations/: 001_initial_backend_platform.sql  002_health_device_integrations.sql  003_channels_calls_escalation.sql  004_security_lint_fixes.sql  005_performance_lint_fixes.sql  006_drop_generated_duplicate_indexes.sql  007_add_supabase_auth_provider.sql  008_add_supabase_auth_bridge.sql  README.md
openapi/: careagent-backend-v1.yaml  channels-calls-escalation.openapi.yaml  health-device-integrations.yaml
scripts/: apply_migrations.ps1  probe_make_mcp.ps1  validate_migrations.ps1
supabase/: config.toml
tests/: backend-contract-test-plan.md  emergency_simulation_cases.json  emergency_simulation_scenarios.md  test_agent_runtime_adapter.py  test_agent_tools_contract.py  test_api_smoke.py  test_care_data_api.py  test_channel_templates.py  test_escalation_engine.py  test_make_mcp_voice_adapter.py  test_pilot_api.py  test_production_readiness.py  test_risk_engine.py
(+23 files in other folders)
