[project]
name = "careagent-backend-api"
version = "0.1.0"
description = "Minimal FastAPI skeleton for the CareAgent backend API contract."
requires-python = ">=3.11"
dependencies = [
  "firebase-admin>=6.6,<7.0",
  "fastapi>=0.115,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "psycopg-pool>=3.2,<4.0",
  "pydantic>=2.7,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = [
  "docs*",
  "migrations*",
  "openapi*",
  "scripts*",
  "supabase*",
  "templates*",
  "tests*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
